# iris_vision

./: .gitattributes  CMakeLists.txt  README.md  package.xml  setup.py
src/: Doppler.py  ghost_net_inference.py  image_transformation.m  inference_mkII.py  sensor_nav.py
src/annotations/: .test.record.swp  .train.record.swp  label_map.pbtxt  train.record
src/exported-models/ghost_mkII_efficientdet_d0_GPU/: pipeline.config
src/exported-models/ghost_mkII_efficientdet_d0_GPU/checkpoint/: checkpoint  ckpt-0.index
src/exported-models/ghost_mkII_efficientdet_d0_GPU/saved_model/variables/: variables.index
src/exported-models/ghost_mkII_mobilenet_CPU/: pipeline.config
src/exported-models/ghost_mkII_mobilenet_CPU/checkpoint/: checkpoint  ckpt-0.index
src/exported-models/ghost_mkII_mobilenet_CPU/saved_model/variables/: variables.index
src/exported-models/ghost_mkII_resnet50_CPU/: pipeline.config
src/exported-models/ghost_mkII_resnet50_CPU/checkpoint/: checkpoint  ckpt-0.data-00000-of-00001  ckpt-0.index
src/exported-models/ghost_mkII_resnet50_CPU/saved_model/variables/: variables.data-00000-of-00001  variables.index
