<?xml version="1.0"?>
<package format="2">
  <name>iris_vision</name>
  <version>0.0.0</version>
  <description>The iris_vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="msilva.cmiguel@gmail.com">tugalinebacker</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LSA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosparam</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>diagnostic_aggregator</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rosparam</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <!-- COLA2 Dependencies -->
  <depend>cola2_lib_ros</depend>
  <depend>cola2_msgs</depend>
  <depend>iris_description</depend>
</package>
